public/assets/styles/components/_flexible.scss
.flexible-workspace{
  *{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
  
  background-color: #F5F5F5;

  .container{
    width: 90%;
    max-width: 1440px;
    margin: 0 auto;
    padding: 4rem 0;

    @include mobile{
      width: 100%;
      padding: 2rem 0;
    }
  }


  .top-header{
    display: flex;
    justify-content: space-between;
    align-items: start;
    margin-bottom: 4rem;

    width: 90%;
    h3{
      font-size: 40px;
      font-weight: 400;
      line-height: 40px;
      text-align: left;
      color: #393939;
    }
    .side-heading{
      display: flex;
      flex-direction: column;
      gap: 0.5rem;

      .india{
        display: flex;
        gap: 0.5rem;
        align-items: center;
        img{
          border-radius: 100%;
        }
        p{
          font-size: 16px;
          font-weight: 400;
          line-height: 24px;
          text-align: center;
          color: black;
        }
      }

      .search{
        display: flex;
        gap: 0.5rem;
        align-items: center;
        input{
          border: none;
          outline: none;
          appearance: none;
          text-decoration: underline;
          background: transparent;
          text-decoration-color: #393939;
          width: 250px;
          font-size: 14px;
        }

      }
    
    }

    @include tablet{
      flex-direction: column;
      gap: 1rem;

      padding: 0 1rem;
    }

  }


  .buttons-top{
    width: 90%;

    display: grid;
    grid-template-columns: repeat(4, 1fr);

    border-radius: 3rem;
    overflow: hidden;
    background: white;

    border: 1px solid #D7D7D7;

    .button-top{
      font-size: 32px;
      font-weight: 400;
      line-height: 48px;
      text-align: center;

      border: none;
      outline: none;
      appearance: none;

      padding: 0.5rem 0;

      color: #616161;
      background: white;
    }

    .active{
      background: #4CAF50;
      
      color: white;
      border-radius: 50px;
    }

    @include tablet{
      display: none;
    }
  }

  .section-desc{
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    text-align: left;
    color: #393939;

    margin: 1.5rem  0;
    @include mobile{
      padding: 0 1rem;
    }
  }




  .gridslider-container{
    display: flex;

    @include mobile{
      margin-left: 1rem;
    }

    .grid-slider{
      display: grid;
      gap: 1rem;
      grid-template-columns: repeat(5, 1fr);
      width: 100%;

      &::-webkit-scrollbar {
        display: none;
      }

      -ms-overflow-style: none;
      scrollbar-width: none;

      

      .grid-item{
        display: flex;
        flex-direction: column;
        border-radius: 8px;
        overflow: hidden;
        cursor: pointer;

        .image-container{
          width: 100%;

          img{
            aspect-ratio: 1/1;
            width: 100%;
            height: auto;
            object-fit: contain;
          }
        }

        .grid-data{
          padding: 1rem;
          display: flex;
          justify-content: space-between;
          height: 100%;
          flex-direction: column;
          gap: 0.5rem;

          .grid-data-desc{
            display: flex;
            flex-direction: column;
            gap: 0.5rem;

            h4{
              font-size: 18px;
              font-weight: 400;
              line-height: 24px;
              text-align: left;
            }
  
            .desc{
              font-size: 16px;
              font-weight: 400;
              line-height: 20px;
              text-align: left;
            }
  
            .points{
              display: flex;
              gap: 0.5rem;
  
              p{
                font-size: 16px;
                font-weight: 400;
                line-height: 24px;
                text-align: left;
              }
            }
          }

          .grid-data-cta{

            display: flex;
            flex-direction: column;
            gap: 0.5rem;
            

            .color-heading{
              font-size: 18px;
              font-weight: 400;
              line-height: 24px;
              text-align: left;
              color: #008385;
            }
  
            .buttons{
              display: flex;
              gap: 0.5rem;
  
              button{
                padding: 5px 20px;
                border-radius: 3rem;
                border: 1px solid #2962FF;
                opacity: 0px;
                a{
                  font-size: 14px;
                  font-weight: 400;
                  line-height: 24px;
                  text-align: left;
                  text-decoration: none;  
                }
  
              }
  
              .primary{
                background: #2962FF;
                a{
                  color: white;
                }
              }
              
              .secondary{
                background: white;
                color: #2962FF;
              }
            
            }
          }
        }
      }

      .active{
        background: #333333;
        color: white;
        .points{
          img{
            filter:brightness(0) saturate(100%) invert(100%) sepia(67%) saturate(213%) hue-rotate(183deg) brightness(109%) contrast(101%)
          }
        }
      }
      
      .inactive{
        background: white;
        color: #616161;
      }

      @include tablet{
        display: flex;
        overflow-x: scroll;

        .grid-item{
          min-width: 40%;
        }
      }

      @include mobile{
        .grid-item{
          min-width: 80%;
        }
      }
    }
  }

}

